--- a/requirements.txt
+++ b/requirements.txt
@@ -1,24 +1,24 @@
-aiohttp             3.8.1
-aiosignal           1.2.0
-async-timeout       4.0.2
-attrs               22.1.0
-autopep8            1.7.0
-certifi             2022.9.24
-cffi                1.15.1
-charset-normalizer  2.1.1
-discord-pretty-help 1.3.4
-discord.py          2.0.1
-frozenlist          1.3.1
-idna                3.3
-multidict           6.0.2
-Pillow              9.3.0
-pip                 22.3
-pycodestyle         2.9.1
-pycparser           2.21
-PyNaCl              1.5.0
-python-dotenv       0.20.0
-requests            2.28.1
-setuptools          63.2.0
-toml                0.10.2
-urllib3             1.26.12
-yarl                1.8.1
+aiohttp==3.8.1
+aiosignal==1.2.0
+async-timeout==4.0.2
+attrs==22.1.0
+autopep8==1.7.0
+certifi==2022.9.24
+cffi==1.15.1
+charset-normalizer==2.1.1
+discord-pretty-help==1.3.4
+discord.py==2.0.1
+frozenlist==1.3.1
+idna==3.3
+multidict==6.0.2
+Pillow==9.3.0
+pip==22.3
+pycodestyle==2.9.1
+pycparser==2.21
+PyNaCl== 1.5.0
+python-dotenv==0.20.0
+requests==2.28.1
+setuptools==63.2.0
+toml==0.10.2
+urllib3==1.26.12
+yarl==1.8.1
